# kloros

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: apply-patch.yml  ci.yml  open-pr-from-bot.yml
docs/: GATEWAY_SMOKE.md  GATEWAY_TEST.md
scripts/: dev.ps1
src/kloros/: __init__.py  __main__.py
tests/: test_health.py
